# astro_utils

./: Cargo.toml  README.md  deny.toml
.github/workflows/: _build.yml  _tests.yml  build.yml  tests.yml
data_fit_functions/: .gitignore  plot.sh
playground/: download_tables.sh  synchronous_query.sh
playground/gaia/: .gitignore  synchronous_query.sh
scripts/: run_long_tests.sh
src/: angle.rs  astro_display.rs  black_body.rs  color_matching_functions.rs  compact_float.rs  distance.rs  error.rs  kepler_orbit.rs  length.rs  lib.rs  mass.rs  orbit_orientation.rs  planet_brightness.rs  random_stars.rs  solar_system_data.rs  stellar_properties.rs  surface_normal.rs  time.rs  unit_formatting.rs
src/astro_display/: mod.rs  simple_impl.rs
src/color/: black_body.rs  color_matching_functions.rs  mod.rs  srgb.rs  xyz.rs
src/coordinates/: cartesian.rs  declination.rs  direction.rs  earth_equatorial.rs  ecliptic.rs  equatorial.rs  mod.rs  right_ascension.rs  rotations.rs  spherical.rs  unit_vector.rs
src/coordinates/transformations/: mod.rs  relative_direction.rs  rotations.rs
src/data/: mod.rs  planets.rs  stars.rs
src/planets/: derived_data.rs  kepler_orbit.rs  mod.rs  orbit_orientation.rs  orbit_parameters.rs  physical_parameters.rs  planet.rs  planet_brightness.rs  planet_data.rs  random_planets.rs  real_data.rs  surface_normal.rs
src/real_data/: mod.rs  planets.rs  stars.rs
src/real_data/stars/: _replace.sh  all.rs  andromeda.rs  antlia.rs  apus.rs  aquarius.rs  aquila.rs  ara.rs  aries.rs  auriga.rs  bootes.rs  caelum.rs  camelopardalis.rs  cancer.rs  canes_venatici.rs  canis_major.rs  canis_minor.rs  capricornus.rs  carina.rs  cassiopeia.rs  centaurus.rs  cepheus.rs  cetus.rs  chamaeleon.rs  circinus.rs  columba.rs  coma_berenices.rs  corona_australis.rs  corona_borealis.rs  corvus.rs  crater.rs  crux.rs  cygnus.rs  delphinus.rs  dorado.rs  draco.rs  equuleus.rs  eridanus.rs  fornax.rs  gemini.rs  (+51 more)
src/stars/: appearance.rs  appearance_evolution.rs  constellation.rs  data.rs  data_evolution.rs  evolution.rs  fate.rs  gaia_data.rs  mod.rs  parsec_data.rs  physical_parameters.rs  random_stars.rs  real_data.rs  star.rs  star_appearance.rs  star_appearance_evolution.rs  star_data.rs  star_data_evolution.rs
src/stars/constellation/: connection.rs  constellation.rs  mod.rs
src/stars/gaia/: gaia_source.rs  gaia_universe_simulation.rs  mod.rs
src/stars/random/: mod.rs  params.rs  parsec_data.rs  parsec_handling.rs  (+2 more)
src/units/: acceleration.rs  angle.rs  angle_std_ops.rs  color.rs  conversions.rs  density.rs  distance.rs  formatting.rs  illuminance.rs  illuminance_std_ops.rs  irradiance.rs  length.rs  length_std_ops.rs  luminance.rs  luminosity.rs  luminosity_std_ops.rs  luminous_intensity.rs  mass.rs  mass_std_ops.rs  mod.rs  solid_angle.rs  temperature.rs  temperature_std_ops.rs  time.rs  time_std_ops.rs  velocity.rs
tests/: gaia_vs_parsec.rs
(+8 files in other folders)
