[package]
name = "astro_utils"
version = "0.1.0"
edition = "2021"

[lib]
name         = "astro_utils"
crate-type   = ["rlib"]

[dependencies]
directories = "5.0.0" # Standard locations on file system
flate2 = "1.0.0" # Decompression
forward_ref_generic = "0.2.0" # Auto-generating std operations on structs
rand = "0.8.0" # Random number generation
reqwest = { version = "0.11", features = ["blocking"] } # Downloading files
rmp-serde = "1.1.0"
serde = { version = "1.0", features = ["derive"] } # (De)Serialization
serde_json = "1.0.0"
tar = "0.4.0" # Decompression
